# scaffold

./: LICENSE  README.md  Readme.md  pyproject.toml
.github/workflows/: ci.yml
beautiful-app/: .gitignore  README.md  pyproject.toml
beautiful-app/src/beautiful_app/: main.py
my-awesome-app/: README.md  pyproject.toml
my-awesome-app/src/my_awesome_app/: main.py
my-awesome-app/src/my_awesome_app.egg-info/: PKG-INFO  SOURCES.txt
src/scaffold/: cli.py  generator.py  git_utils.py
src/scaffold/templates/: main.py.j2
src/scaffold/templates/basic/: pyproject.toml.j2
src/scaffold/templates/fastapi/: README.md.j2  main.py.j2  pyproject.toml.j2
src/scaffold_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test-basic-app/: README.md  pyproject.toml
test-basic-app/src/test_basic_app/: main.py
test-web-app/: README.md  pyproject.toml
test-web-app/src/test_web_app/: main.py
test-web-app/src/test_web_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_generator.py
